# src/routes/debtSource.routes.ts
@@ -1,0 +1,13 @@
+import express from 'express'
+import { createDebtSource } from '../controllers/debtSource.controller'
+import { authenticateToken } from '../middleware/auth.middleware'
+
+const router = express.Router()
+
+router.post('/', authenticateToken, createDebtSource)
+// router.get('/', authenticateToken, getAllDebtSources);
+// router.get('/:id', authenticateToken, getDebtSourceById);
+// router.put('/:id', authenticateToken, updateDebtSource);
+// router.delete('/:id', authenticateToken, deleteDebtSource);
+
+export default router
